force-app/main/default/objects/Event_Types__mdt/fields/Event_Types__c.field-meta.xml
<CustomField>
    <fullName>Event_Types__c</fullName>
    <label>Event Types</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Trade Show</fullName>
                <default>true</default>
                <label>Trade Show</label>
            </value>
            <value>
                <fullName>Customer Training</fullName>
            </value>
            <value>
                <fullName>VS Internal</fullName>
            </value>
            <value>
                <fullName>SFDC System Reminder</fullName>
            </value>
            <value>
                <fullName>Meeting Site</fullName>
            </value>
            <value>
                <fullName>Meeting Web</fullName>
            </value>
            <value>
                <fullName>Meeting Phone</fullName>
            </value>
            <value>
                <fullName>Floor Walk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>