force-app/main/default/objects/Event_Types__mdt/fields/Subject_Matching_Phrase__c.field-meta.xml
<CustomField>
    <fullName>Subject_Matching_Phrase__c</fullName>
    <label>Subject Matching Phrase</label>
    <length>200</length>
    <type>Text</type>
</CustomField>