force-app/main/default/objects/Event_Types__mdt/fields/Type_Rank__c.field-meta.xml
<CustomField>
    <fullName>Type_Rank__c</fullName>
    <description>The ranking of the type may not be used</description>
    <label>Type Rank</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>